--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-rebase-files",
+	"name": "git-rebase-files",
 	"displayName": "git rebase files",
 	"description": "add,edit,remove files from past commits",
 	"version": "0.0.1",
@@ -10,15 +10,21 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:git-rebase-files.helloWorld"
+		"onCommand:git-rebase-files.helloWorld",
+		"onCommand:git-rebase-files.stash-staged-only"
 	],
 	"main": "./extension.js",
 	"contributes": {
-		"commands": [{
-            "command": "git-rebase-files.helloWorld",
-            "title": "Hello World"
-
-		}]
+		"commands": [
+			{
+				"command": "git-rebase-files.helloWorld",
+				"title": "Hello World"
+			},
+			{
+				"command": "git-rebase-files.stash-staged-only",
+				"title": "git-rebase-files: stash staged only"
+			}
+		]
 	},
 	"scripts": {
 		"lint": "eslint .",
@@ -26,15 +32,17 @@
 		"test": "node ./test/runTest.js"
 	},
 	"devDependencies": {
-        "@types/vscode": "^1.52.0",
-        "@types/glob": "^7.1.3",
-        "@types/mocha": "^8.0.0",
-        "@types/node": "^14.0.27",
-        "eslint": "^7.6.0",
-        "glob": "^7.1.6",
-        "mocha": "^8.0.1",
-        "typescript": "^3.8.3",
-        "vscode-test": "^1.4.0"
-    }
-
+		"@types/glob": "^7.1.3",
+		"@types/mocha": "^8.0.0",
+		"@types/node": "^14.0.27",
+		"@types/vscode": "^1.52.0",
+		"eslint": "^7.6.0",
+		"glob": "^7.1.6",
+		"mocha": "^8.0.1",
+		"typescript": "^3.8.3",
+		"vscode-test": "^1.4.0"
+	},
+	"dependencies": {
+		"shelljs": "^0.8.4"
+	}
 }
