--- a/.vscodeignore
+++ b/.vscodeignore
@@ -6,3 +6,8 @@ vsc-extension-quickstart.md
 **/jsconfig.json
 **/*.map
 **/.eslintrc.json
+node_modules/**
+
+extension.js
+webpack.config.js
+yarn-error.log
