--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"onCommand:git-rebase-files.edit-past-commit",
 		"onCommand:git-rebase-files.gitlens_interactive-rebase"
 	],
-	"main": "./extension.js",
+	"main": "./dist/extension.js",
 	"contributes": {
 		"commands": [
 			{
@@ -46,6 +46,7 @@
 		]
 	},
 	"scripts": {
+		"vsix": "webpack --mode production && vsce package -o git-rebase-files.vsix",
 		"package": "vsce package",
 		"lint": "eslint .",
 		"pretest": "yarn run lint",
@@ -61,7 +62,9 @@
 		"mocha": "^8.0.1",
 		"typescript": "^3.8.3",
 		"vsce": "^1.83.0",
-		"vscode-test": "^1.4.0"
+		"vscode-test": "^1.4.0",
+		"webpack": "^5.11.0",
+		"webpack-cli": "^4.3.0"
 	},
 	"dependencies": {
 		"shelljs": "^0.8.4",
