--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
 		"@types/mocha": "^8.0.0",
 		"@types/node": "^14.0.27",
 		"@types/vscode": "^1.52.0",
+		"copy-webpack-plugin": "^7.0.0",
 		"eslint": "^7.6.0",
 		"glob": "^7.1.6",
 		"mocha": "^8.0.1",
+		"ts-loader": "^8.0.12",
 		"typescript": "^3.8.3",
 		"vsce": "^1.83.0",
 		"vscode-test": "^1.4.0",
