gitlens_interactive-rebase: works now, using terminal.sendText

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"onCommand:git-rebase-files.edit-past-commit",
 		"onCommand:git-rebase-files.gitlens_interactive-rebase"
 	],
-	"main": "./dist/extension.js",
+	"main": "./extension.js",
 	"contributes": {
 		"commands": [
 			{
