Run Extension bundles to 'dist/extension.js', runs on "Compilation finished"
tasks.json : problemMatcher
https://github.com/TypeStrong/ts-loader/issues/660#issuecomment-413664871

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"vsix": "webpack --mode production && vsce package -o git-rebase-files.vsix",
 		"nowebpack": "vsce package -o git-rebase-files.vsix && code --install-extension git-rebase-files.vsix",
 		"dev": "webpack --mode development --watch",
+		"watch": "webpack --mode development --watch",
 		"webpack": "webpack --mode production",
 		"package": "vsce package -o git-rebase-files.vsix",
 		"lint": "eslint .",
